--- a/sections/lotion-lp.liquid
+++ b/sections/lotion-lp.liquid
@@ -1,18 +1,38 @@
-<header>
-    <h1>oi</h1>
-</header>
+{{ 'lotion-lp.css' | asset_url |  stylesheet_tag}}
+{% liquid
+    assign collections = collections[section.settings.all_collections].all.products
+%}
 
-<section>
-    <main>
-        <span>oi</span>
-    </main>
-</section>
+    <header>
+        <h1>{{ page.title }}</h1>
+    </header>
+
+    <section>
+        <main>
+            <p>{{ page.content }}</p>
+        </main>
+
+        {% for product in collection %}
+            <div class="product-card">
+                <h2>{{ product.title }}</h2>
+                <p>{{ product.description }}</p>
+            </div>
+        {% endfor %}
+    </section>
+
+
+
+
 
 {% schema %}
 {
     "name": "lotion-lp",
     "settings": [
-        
+            {
+                "type": "collection",
+                "id": "all_collections",
+                "label": "coleção"
+            }
         ],
         "presets": [
             {
