feat:Finalizando e verificando schema

--- a/sections/lotion-lp.liquid
+++ b/sections/lotion-lp.liquid
@@ -3,8 +3,8 @@
     assign collections = collections[section.settings.all_collections].all.products
 %}
 
-    <header>
-        <h1>{{ page.title }}</h1>
+   <header>
+    <h1>{{ page.title }}</h1>
     </header>
 
     <section>
@@ -16,12 +16,16 @@
 
 
     {% assign featured_product = section.settings.main_product %}
+
     {% if featured_product != blank %}
+
         <div class="featured-product">
-        <h2>{{ featured_product.title }}</h2> [cite: 32]
-        <p>{{ featured_product.price | money }}</p> [cite: 33]
-        <img src="{{ featured_product.featured_image | img_url: 'medium' }}" alt="{{ featured_product.title }}"> [cite: 34]
-        <a href="{{ featured_product.url }}">Ver produto</a> [cite: 35]
+
+        <h2>{{ featured_product.title }}</h2> 
+        <p>{{ featured_product.price | money }}</p> 
+        <img src="{{ featured_product.featured_image | img_url: 'medium' }}" alt="{{ featured_product.title }}"> 
+        <a href="{{ featured_product.url }}">Ver produto</a> 
+
     </div>
     {% endif %}
 
@@ -30,13 +34,17 @@
 
 
     <div class="collection-list">
+
     {% assign selected_collection = section.settings.all_collections %}
+
     {% for product in selected_collection.products %}
+
         <div class="product-card">
         <h3>{{ product.title }}</h3>
         <p>{{ product.price | money }}</p>
         <img src="{{ product.featured_image | img_url: 'small' }}" alt="{{ product.title }}">
         <a href="{{ product.url }}">Comprar</a>
+
         </div>
     {% endfor %}
   </div>
