--- a/sections/lotion-lp.liquid
+++ b/sections/lotion-lp.liquid
@@ -1,10 +1,7 @@
 {{ 'lotion-lp.css' | asset_url |  stylesheet_tag}}
-{% liquid
-    assign collections = collections[section.settings.all_collections].all.products
-%}
 
    <header>
-    <h1>{{ page.title }}</h1>
+    <h1> {{ page.title }} </h1>
     </header>
 
     <section>
@@ -55,6 +52,13 @@
 {
     "name": "lotion-lp",
     "settings": [
+
+        {
+            "type": "text",
+            "id": "title",
+            "label": "Teste",
+            "default": "Loções"
+        },
 
         {
             "type": "product",
