--- a/sections/lotion-lp.liquid
+++ b/sections/lotion-lp.liquid
@@ -1,16 +1,10 @@
-{{ 'lotion-lp.css' | asset_url |  stylesheet_tag}}
-
-   <header>
-    <h1> {{ page.title }} </h1>
-    </header>
+     <header>
+    <h1>{{ page.title }}</h1>
+  <div>{{ page.content }}</div>
+</header>
 
     <section>
-        <main>
-            <p>{{ page.content }}</p>
-        </main>
-
         <hr>
-
 
     {% assign featured_product = section.settings.main_product %}
 
